Mobile view horizontal scroll-issue solved and add animations

--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,15 @@
 html {
   font-size: 65.5%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   color: #252525;
   font-family: "Lato", sans-serif;
   font-size: 1.6rem;
-  overflow-x: hidden !important;
   word-spacing: 0.2em;
+  overflow: hidden;
 }
 
 a {
